--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 This is a tool for checking Non Ascii Character inside the words.
 
-some add script which need jsch lib for my team purpose which need execute bash script inside of Linux server.
+New button --> CMS Broadcast report, this is for my team purpose which need jsch lib to execute bash script in Linux server.
